# vep_project

./: .gitignore  Dockerfile  LICENSE  README.md  annotator.py  environment.yml  pyproject.toml
.github/workflows/: python-package-conda.yml
annotator/: exceptions.py  main.py  vcf.py  vep.py
output/main/: variants.tsv
tests/: vcf.py  vep.py
tests/data/: empty.vcf  platypus.vcf  wildcard.vcf
